<resources>
    <string name="app_name">cafeteriaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="usernamee">UserName</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuari">usuari</string>
    <string name="pay">Pay</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
</resources>